reduce container size